CLEANFILES = *~
MAINTAINERCLEANFILES = Makefile.in

CONSTRAINTS_FILES = \
	Bq-to-ll.yaml \
	B-to-K-ll.yaml \
	B-to-Kstar-gamma.yaml \
	B-to-Kstar-ll.yaml \
	B-to-pi-l-nu.yaml \
	B-to-Xs-gamma.yaml \
	B-to-Xs-ll.yaml \
	B-to-P-form-factors.yaml \
	B-to-P-P-form-factors.yaml \
	B-to-V-form-factors.yaml \
	Lb-to-L-ll.yaml \
	Lb-to-Lq-form-factors.yaml \
	miscellaneous.yaml

EXTRA_DIST = $(CONSTRAINTS_FILES)

constraintsdir = $(pkgdatadir)/constraints
constraints_DATA = $(CONSTRAINTS_FILES)
