CLEANFILES = *~
MAINTAINERCLEANFILES = Makefile.in

CONSTRAINTS_FILES = \
	Bq-to-dilepton.yaml \
	Bq-to-Dq-P.yaml \
	B-to-K-charmonium.yaml \
	B-to-K-ll.yaml \
	B-to-Kstar-charmonium.yaml \
	B-to-Kstar-gamma.yaml \
	B-to-Kstar-ll.yaml \
	B-to-D-l-nu.yaml \
	B-to-D-pi-l-nu.yaml \
	B-to-pi-l-nu.yaml \
	B-to-pi-pi-l-nu.yaml \
	B-to-psd-psd.yaml \
	B-to-omega-l-nu.yaml \
	B-to-rho-l-nu.yaml \
	B-to-Xs-gamma.yaml \
	B-to-Xs-ll.yaml \
	B-to-P-form-factors.yaml \
	B-to-P-P-form-factors.yaml \
	B-to-V-form-factors.yaml \
	Bs-to-Ds-gamma-l-nu.yaml \
	Bs-to-Ds-l-nu.yaml \
	Bs-to-phi-charmonium.yaml \
	Bs-to-phi-ll.yaml \
	D-to-K-l-nu.yaml \
	D-to-P-form-factors.yaml \
	Dq-to-dilepton.yaml \
	dispersive-bounds.yaml \
	ee-to-ccbar.yaml \
	ee-to-pipi.yaml \
	epi-to-epi.yaml \
	Lb-to-L-ll.yaml \
	Lb-to-Lq-form-factors.yaml \
	Lc-to-L-form-factors.yaml \
	Lc-to-L-l-nu.yaml \
	miscellaneous.yaml \
	tau-to-pi-pi-nu.yaml \
	wet-constraints.yaml

EXTRA_DIST = $(CONSTRAINTS_FILES)

constraintsdir = $(pkgdatadir)/constraints
constraints_DATA = $(CONSTRAINTS_FILES)
