CLEANFILES = *~
MAINTAINERCLEANFILES = Makefile.in

PARAMETER_FILES = \
	b-to-s-fcnc.yaml \
	b-to-s-long-distance.yaml \
	b-to-u-cc.yaml \
	b-to-c-cc.yaml \
	ckm.yaml \
	decay-constants.yaml \
	form-factors.yaml \
	hqe.yaml \
	kstar-lcda.yaml \
	life-times.yaml \
	masses.yaml \
	pi-lcda.yaml \
	polarisations.yaml \
	qcd.yaml \
	sm.yaml \
	zrsr.yaml

EXTRA_DIST = $(PARAMETER_FILES)

parametersdir = $(pkgdatadir)/parameters
parameters_DATA = $(PARAMETER_FILES)
